[package]
name = "gtkui-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.17.0" }
gtk-ui = "0.2.2"
dashmap = "5.4.0"
ropey = "1.5.0"
